# Divination

./: README.md  docker-compose.yml
backend/: .env.sample  .gitignore  ContextEnricher.py  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/adapters/: OpenAILLM.py  VectorDatabaseEnricher.py
backend/database/: textobase.txt
backend/ports/: ContextEnricher.py
backend/src/: main.py
backend/src/adapters/: OpenAILLM.py  VectorDatabaseEnricher.py
backend/src/ports/: ContextEnricher.py  LLMAnswerer.py
backend/src/project/: main.py
backend/src/project/adapters/: AnswerRouter.py  AnswerTemplate.py  ChatRepository.py  OpenAILLM.py  Settings.py  VectorDatabaseEnricher.py  answer_dto.py  chat_dto.py
backend/src/project/adapters/answerers/: OpenAILLM.py
backend/src/project/adapters/database/: ChatRepository.py
backend/src/project/adapters/enrichers/: AnswerEnricher.py  VectorDatabaseEnricher.py
backend/src/project/adapters/routers/: AnswerRouter.py  ChatRouter.py  route_exchange.py
backend/src/project/adapters/routers/dto/: answer_dto.py  chat_dto.py
backend/src/project/core/: ChatService.py  RagChain.py
backend/src/project/database/: contextualized_prompt.txt  creativeTemplate.txt  defaultTemplate.txt
backend/src/project/database/templates/: defaultTemplate.txt
backend/src/project/ports/: ContextEnricher.py  LLMAnswerer.py  Repository.py  TemplateEnricher.py
backend/src/project/ports/answerers/: LLMAnswerer.py
backend/src/project/ports/enrichers/: TemplateEnricher.py
backend/src/project/ports/routers/: Router.py
(+12 files in other folders)
