[tool.poetry]
name = "D&D answerer"
version = "0.1"
description = "D&D answerer backend"
authors = ["Luiz Carlos <luizcarlosdk@usp.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.5.2"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.4"
bs4 = "^0.0.2"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
fastapi = "^0.115.2"
pypdf = "^5.1.0"

[tool.ruff]
line-length = 79